[package]
name = "blueshift_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
solana-address = { version = "2.0", features = ["sha2", "syscalls", "curve25519"] }
pinocchio = "0.10.1"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"

[dev-dependencies]
mollusk-svm = "0.10.1"
mollusk-svm-programs-memo = "0.10.1"
mollusk-svm-programs-token = "0.10.1"
solana-account = "3.3.0"
solana-feature-set = "2.2.5"
solana-precompiles = "2.2.2"
solana-program = "3.0.0"
solana-pubkey = "4.0.0"
solana-sdk = "3.0.0"